# demeter-utils

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pull_request_template.md  pyproject.toml
.ci/: id_rsa.enc
demeter_utils/: __init__.py  _version.py  cli.py
demeter_utils/cli/: download_field_insights_data.py
demeter_utils/cli/data_ingest/: _insert_data.py
demeter_utils/data_ingest/: __init__.py  __main__.py  _collect_data.py  _custom.py  _database_insert.py  _gql.py  _local.py  _time.py  _utils.py  constants.py
demeter_utils/data_ingest/cloudvaullt/: _connect.py
demeter_utils/data_ingest/cloudvault/: __init__.py  _gql.py  _long.py
demeter_utils/features/: __init__.py  _app.py  _functions.py  _obs.py  _plant.py  _soil.py  _utils.py  _weather.py
demeter_utils/insert/demeter/: __init__.py  _act.py  _app.py  _core.py  _crop_type.py  _grouper.py  _nutrient_source.py  _organization.py
demeter_utils/interpolate/: _interpolate.py
demeter_utils/query/: __init__.py  _query.py  _query_format.py  _translate.py  _weather.py
demeter_utils/query/_demeter/: _act.py  _core.py  _field.py  _format.py  _grouper.py  _obs.py
demeter_utils/query/demeter/: __init__.py  _act.py  _core.py  _crop_type.py  _field.py  _format.py  _grouper.py  _obs.py
demeter_utils/query/weather/: __init__.py  _weather.py
demeter_utils/temporal_inference/: __init__.py  _inference.py  _prep.py  _train.py  _utils.py  _weights.py
demeter_utils/tests/: conftest.py  data.py  test_grouper_utils.py  test_query_weather.py
demeter_utils/time/: __init__.py  _utils.py
demeter_utils/time_series/: utils.py
demeter_utils/time_series/inference/: __init__.py  _inference.py  _prep.py  _train.py  _utils.py
demeter_utils/time_series/inference/_double_logistic/: fit_example.py  functions.py
demeter_utils/time_series/interpolate/: __init__.py  _weighted.py  _weights.py
demeter_utils/update/: __init__.py  _details.py
scripts/: dem-445-double_logistic_fit_example.py  double_sigmoid.py  double_sigmoid_example.py  fill_in_example.py  interpolate_example.py  interpolate_reweighting.py  interpolation_example.py  interpolation_methods.py  query_weather_example.py  recalibrate_example.py  test_interpolate.py
scripts/double_logistic/: fit_example.py  functions.py
