[tool.poetry]
name = "demeter_utils"
version = "0.0.1"
description = "Python library that provides wrapper functions for interacting with the demeter database at a higher level."
authors = []

[tool.poetry.dependencies]
python = "~3.10.4"
click = "*"
psycopg2 = "^2.9.3"
demeter = {git = "ssh://git@github.com/SenteraLLC/demeter.git", rev="v1.1.19"}

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
sure = "^2.0"
flake8 = "^4.0"
black = {version = "^22.6", allow-prereleases = true}

[tool.poetry.scripts]
demeter_utils = "demeter_utils.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
